# stm32_rust

./: Cargo.toml
.cargo/: config.toml
examples/: day3.rs  day4.rs
src/: main.rs
